--- a/PrestacióndeLibros/PrestacióndeLibros/Resources/StyleSheetMain.css
+++ b/PrestacióndeLibros/PrestacióndeLibros/Resources/StyleSheetMain.css
@@ -1,7 +1,10 @@
-﻿* {
+﻿@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700;800;900&display=swap');
+
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-family: 'Poppins', sans-serif;
 }
 
 header {
@@ -187,7 +190,8 @@ header ul li a {
 
 /*.box:hover{
         transform: scale(1.1);
-    }*/
+ }*/
+
 .contacto {
     background: #ffffff;
 }
@@ -198,14 +202,127 @@ header ul li a {
 }
 
 body {
-	background: #fff;
-	font-family: 'Open Sans', sans-serif;
+    background: #fff;
+    font-family: 'Open Sans', sans-serif;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    min-height: 100vh;
 }
 
-.contenedor {
-	width: 90%;
-	max-width: 1000px;
-	margin: 20px auto;
+.containerbook {
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+    gap: 100px 50px;
+    padding: 100px 50px;
+}
+
+.containerbook .card {
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: flex-start;
+    width: 350px;
+    max-width: 100%;
+    height: 300px;
+    background: white;
+    border-radius: 20px;
+    transition: 0.5s;
+    box-shadow: 0 35px 80px rgba(0, 0, 0, 0.15);
+}
+
+.container .card:hover {
+    height: 400px;
+}
+
+.container .card .img-box {
+    position: absolute;
+    top: 20px;
+    width: 300px;
+    height: 220px;
+    background: #333;
+    border-radius: 12px;
+    overflow: hidden;
+    transition: 0.5s;
+}
+
+.container .card:hover .img-box {
+    top: -100px;
+    scale: 0.75;
+    box-shadow: 0 15px 45px rgba(0, 0, 0, 0.2);
+}
+
+.container .card .img-box img {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+.container .card .content {
+    position: absolute;
+    top: 252px;
+    width: 100%;
+    height: 35px;
+    padding: 0 30px;
+    text-align: center;
+    overflow: hidden;
+    transition: 0.5s;
+}
+
+.container .card:hover .content {
+    top: 130px;
+    height: 250px;
+}
+
+.container .card .content h2 {
+    font-size: 1.5rem;
+    font-weight: 700;
+    color: var(--clr);
+}
+
+.container .card .content p {
+    color: #333;
+}
+
+.container .card .content a {
+    position: relative;
+    top: 15px;
+    display: inline-block;
+    padding: 12px 25px;
+    text-decoration: none;
+    background: var(--clr);
+    color: white;
+    font-weight: 500;
+}
+
+.container .card .content a:hover {
+    opacity: 0.8;
+}
+
+@media (max-width: 480px) {
+    .container .card {
+        width: 230px;
+        border-radius: 15px;
+    }
+
+    .container .card .img-box {
+        width: 185px;
+        border-radius: 10px;
+    }
+
+    .container .card .content p {
+        font-size: 0.8rem;
+    }
+
+    .container .card .content a {
+        font-size: 0.9rem;
+    }
 }
 
 .btn-abrir-popup {    
@@ -251,6 +368,53 @@ body {
     background: rgba(94,125,227, .9);
 }
 
+.centrarf {
+    display: flex; /*convierte el <div> en una fila con elementos alineados horizontalmente*/
+    align-items: center; /*centra verticalmente los elementos dentro de la fila*/
+    height: 30px;
+}
+
+.centrado {
+    text-align: center;
+}
+
+.formato {
+    font-family: Comic Sans MS;
+    font-size: 25px;
+    color: white;
+}
+
+label {
+    font-family: Comic Sans MS;
+    font-size: 20px;
+    color: white;
+}
+
+h1 {
+    text-align: center;
+    font-family: Cooper;
+    font-size: 55px;
+    -webkit-text-fill-color: white;
+    -webkit-text-stroke: 2px black;
+}
+
+.wrapper {
+    display: grid;
+    grid-auto-rows: minmax(100px, auto);
+}
+
+.top {
+    display: flex;
+    height: 20px;
+}
+
+.formatotextbox {
+    font-family: Comic Sans MS;
+    font-size: 20px;
+    color: black;
+}
+
+
 /* ------------------------- */
 /* POPUP */
 /* ------------------------- */
@@ -276,6 +440,9 @@ body {
     background: #f8f8f8;
     box-shadow: 0px 0px 10px 0px rgba(0,0,0,.5);
     border-radius: 10px;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);  
     font-family: "Chakra+Petch", sans-serif;
     padding: 20px;
     text-align: center;
